# pride_kitchen

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  netlify.toml
assets/: client.js  flags.json  main.css
src/: app.rs  category.rs  flag.rs  flag_lib.rs  main.rs  web.rs
src/js/: download_png.js  download_svg.js  scroll_top.js
