[package]
name = "pride_flag_mixer"
version = "0.1.0"
authors = ["Maksym Shcherbak <dev.14805@simplelogin.co>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-alpha.3" }
itertools = "0.14.0"
lazy_static = "1.5.0"
serde = "1.0.219"
serde_json = "1.0.141"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
