[package]
name = "pride_kitchen"
version = "0.2.0"
authors = ["Maksym Shcherbak <maxim.shherbak@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.3" }
serde = "1.0.219"
serde_json = "1.0.141"
itertools = "0.14.0"
num-integer = "0.1"
rand = "0.9.2"
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
